# ads1115

./: .syntastic_cpp_config  .travis.yml  CMakeLists.txt  README.md  index.html  vcpkg-configuration.json  vcpkg.json
.ci/: setup-ssh.sh  travis_deploy_key.enc
.github/workflows/: cmake.yml  doxygen.yml
ads1115/: CMakeLists.txt
ads1115++/: CMakeLists.txt
ads1115++/include/ads1115++/: ads1115.hpp  bit.hpp  config.hpp  fileno.hpp  parameters.hpp  threshold.hpp
ads1115++/src/: ads1115.cpp  config.cpp  fileno.cpp  threshold.cpp
ads1115/include/ads1115/: ads1115.hpp  bit.hpp  config.hpp  parameters.hpp  threshold.hpp
ads1115/src/: ads1115.cpp  config.cpp  threshold.cpp
cmake/: CompilerWarnings.cmake  Doxygen.cmake  ads1115-config.cmake.in
docs/: Doxyfile.in
html/: CTestCostData_8txt.html  README_8md.html  _formulas.tex  ads1115_2src_2ads1115_8cpp.html  ads1115_2src_2ads1115_8cpp__incl.map  ads1115_2src_2ads1115_8cpp__incl.md5  ads1115_2src_2ads1115_8cpp_source.html  ads1115_2src_2config_8cpp.html  ads1115_2src_2config_8cpp__incl.map  ads1115_2src_2config_8cpp__incl.md5  ads1115_2src_2config_8cpp_source.html  ads1115_2src_2threshold_8cpp.html  ads1115_2src_2threshold_8cpp__incl.map  ads1115_2src_2threshold_8cpp__incl.md5  ads1115_2src_2threshold_8cpp_source.html  ads1115_8hpp.html  ads1115_8hpp__dep__incl.map  ads1115_8hpp__dep__incl.md5  ads1115_8hpp__incl.map  ads1115_8hpp__incl.md5  ads1115_8hpp_source.html  ads1115__export_8h.html  ads1115__export_8h.js  ads1115__export_8h__dep__incl.map  ads1115__export_8h__dep__incl.md5  ads1115__export_8h_source.html  annotated.html  annotated_dup.js  bit_8hpp.html  bit_8hpp.js  bit_8hpp__dep__incl.map  bit_8hpp__dep__incl.md5  bit_8hpp__incl.map  bit_8hpp__incl.md5  bit_8hpp_source.html  classADS1115_1_1ADS1115-members.html  classADS1115_1_1ADS1115.html  classADS1115_1_1ADS1115.js  classADS1115_1_1ADS1115__coll__graph.map  classADS1115_1_1ADS1115__coll__graph.md5  (+148 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enums_5.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  (+26 more)
tests/: CMakeLists.txt
tests/src/: ads1115.cpp  config.cpp  fileno.cpp  threshold.cpp
